<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="notification_icon_description">Notification Icon</string>
    <string name="timestamp_2min">2 min ago</string>
    <string name="notification_title">New Message</string>
    <string name="app_name">Flower App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_message">You have a new message from John Doe.</string>
    <string name="notifications_title">Notifications</string>
    <string name="notification">Notification</string>
    <string name="no_orders">You have no orders yet</string>
    <string name="tab_pending_payment">Pending Payment</string>
    <string name="tab_shipping">Shipping</string>
    <string name="tab_delivered">Delivered</string>
    <string name="tab_not_reviewed">Not Reviewed</string>
    <string name="tab_returned">Returned</string>
    <string name="tab_canceled">Canceled</string>
    <string name="filter_title">Bộ lọc</string>
    <string name="spinner_flower_description">Chọn loại hoa</string>
    <string name="price_range_description">Chọn khoảng giá</string>
    <string name="apply_filter">Áp dụng bộ lọc</string>
    <string name="apply_filter_description">Áp dụng bộ lọc tìm kiếm</string>
    <string name="cancel_filter">Hủy</string>

    <!-- Thêm các string cho activity_review_detail.xml -->
    <string name="review_title">Viết đánh giá</string>
    <string name="review_hint">Nhập nội dung đánh giá của bạn...</string>
    <string name="submit_review">Gửi đánh giá</string>
</resources>