<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="#FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:contentDescription="@string/notification_icon_description"
            android:id="@+id/ivIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_notification"
            android:scaleType="centerCrop"/>

        <!-- Notification Title -->
        <TextView
            android:id="@+id/tvNotificationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/tvTimestamp"
            android:layout_toEndOf="@id/ivIcon"
            android:layout_marginStart="12dp"
            android:text="@string/notification_title"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvNotificationMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNotificationTitle"
            android:layout_toEndOf="@id/ivIcon"
            android:layout_marginStart="12dp"
            android:text="@string/new_message"
            android:textSize="14sp"
            android:textColor="#666666"/>

        <!-- Timestamp -->
        <TextView
            android:id="@+id/tvTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/timestamp_2min"
            android:textSize="12sp"
            android:textColor="#888888"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
